...
    required this.count,
    required this.restaurants,
  });

  factory RestaurantListResponse.fromJson(Map<String, dynamic> json) {
    return RestaurantListResponse(
      error: json['error'] ?? false,
      message: json['message'] ?? '',
      count: json['count'] ?? 0,
      restaurants: json['restaurants'] != null
          ? List<Restaurant>.from(
              json['restaurants'].map((item) => Restaurant.fromJson(item)),
            )
...
